[tool.poetry]
name = "toxlidge"
version = "0.0.0-dev0"
description = "A Tox/XMPP gateway"
authors = ["Maki <maki@hotmilk.space>"]
homepage = "https://github.com/makidoll/toxlidge"
documentation = "https://github.com/makidoll/toxlidge"
readme = "README.md"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "slidge-repo"
url = "https://slidge.im/repo"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.9"
slidge-style-parser = "0.1.6"
slidge = "~0.1"
toxygen_wrapper = { git = "https://github.com/makidoll/toxygen_wrapper.git", rev = "072de5411ed2ebd37c6ba161ad9784925771403d" }
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.21.0"
black = "^23.3.0"
isort = "^5.12.0"
ruff = "^0.0.263"
mypy = "^1.2.0"
xmldiff = "^2.6.1"
pre-commit = "^3.2.2"
sphinx = "^6.2.1"
furo = "^2023.3.27"
sphinx-autoapi = "^3"
sphinx-argparse = "^0.4.0"
sphinx-mdinclude = "^0.5.3"
types-pillow = "^10.1.0.2"

[tool.poetry.group.dev.dependencies.slidge-dev-helpers]
git = "https://git.sr.ht/~nicoco/slidge-dev-helpers"
branch = "master"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
toxlidge = "toxlidge.__main__:main"

[tool.mypy]
files = ["toxlidge"]
exclude = [
    "tests",
]
check_untyped_defs = true
strict = false

[[tool.mypy.overrides]]
module = [
    "aiotdlib.*",
]
follow_imports = "skip"

[tool.ruff]
line-length = 120
exclude = [
    "tests",
]

[tool.isort]
profile = "black"
skip = [
    "tests",
]
